<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/psignin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/t1"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/psignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t2"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/dsignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t3"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/dsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t4"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/pid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t5"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/did"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t6"
            android:textAllCaps="false" />


    </LinearLayout>

</HorizontalScrollView>